#
################################################################################

################################################################################
# changes in development version since last release 
################################################################################

# IntaRNA
- BUGFIX: Andronescu07 energy parameter set was not loaded by name without file

# CopomuS :
- exit value 0 if no favorable interaction was found


################################################################################  
################################################################################

200429 Martin Raden
 * python/copomus/candidate_selectors.py :
   * bugfix: sys.exit(0) if not favorable interaction was found

200312 Martin Raden
 * bin/CommandLineParsing :
   * validate_energyFile() : 
     + bugfix: missing check for predefined Andronescu07 data set name

################################################################################
### version 3.2.0
################################################################################  

# IntaRNA
- BUGFIX: accessibility blocking constraints were only applied to seed location
- improved Zall estimate (and depending values) for `--model=X` (default)
- new arguments:
  - `qId|tId` : optional id (FASTA prefix) setup for sequence naming
  - `acc|accW|accL` : meta accessibility setup for both query and target
  - `intLenMax|intLoopMax` : meta interaction and interior loop length setup
  
# CopomuS
- Compensatory mutation selector to support interaction validation experiments

################################################################################

200302 Martin Raden
 * IntaRNA/IndexRange :
   * fromString() :
     * bugfix: + missing parsing of negative indices 
 * IntaRNA/InteractionEnergy :
   * areComplementary() : 
     + check if both positions are accessible (to avoid additional checks in
       predictor recursions)
 * bin/IntaRNA :